--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,12 @@ Adafruit-PlatformDetect>=3.58.0
 Adafruit-Blinka>=8.30.0
 Adafruit-PureIO>=1.1.11
 
+# === Adafruit add-on ===
+adafruit-circuitpython-neopixel-spi
+adafruit-circuitpython-pca9685
+adafruit-circuitpython-ssd1306
+# adafruit-circuitpython-displayio-ssd1306
+
 # === Jetson ===
 # Jetson.GPIO; platform_machine=='aarch64'
 
